CSS fixing up responsive project and spacing section

--- a/src/sass/components/Mui/dialog.scss
+++ b/src/sass/components/Mui/dialog.scss
@@ -71,6 +71,21 @@
     width: 100%;
     margin: 0 auto;
 
+    //$ Close icon
+    &__close {
+        border: 2px solid black;
+        padding: 0.2rem;
+        border-radius: 1rem;
+        transition: 0.2s all ease-in-out;
+        &:hover {
+
+            transition: 0.2s all ease-in;
+            color: $palette-secondary;
+            border-color: $palette-secondary;
+
+        }
+    }
+    //$ Title label
     &__label {
         font-size: 1.7rem;
         letter-spacing: 0.1rem;
