--- a/src/sass/components/projects/project.scss
+++ b/src/sass/components/projects/project.scss
@@ -5,9 +5,9 @@
 
     border: $border-test;
 
-    min-height: 700px;
+    min-height: 1100px;
     height: 100%;
-    max-height: 1100px;
+    max-height: 2500px;
     padding: 2rem;
     text-align: center;
     margin-top: 8rem;
@@ -21,6 +21,7 @@
 
     //$ Header text
     &--header {
+        padding:1rem auto;
         font-size: 2.6rem;
         letter-spacing: 0.1rem;
         font-weight: 500;
@@ -28,8 +29,10 @@
 
     //$ Under test
     &--sub {
-        line-height: 145%;
-        font-weight: 300;
+        line-height: 150%;
+        font-weight: 400;
+        margin:0 auto 6rem;
+        width:70%;
         font-size: 1.6rem;
         a {
             padding-left: 0.8rem;
