--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -247,9 +247,9 @@ MEDIA QUERIES MIXINS
   margin: 0 auto;
   width: 85vw;
   border: 2px solid black;
-  min-height: 700px;
+  min-height: 1100px;
   height: 100%;
-  max-height: 1100px;
+  max-height: 2500px;
   padding: 2rem;
   text-align: center;
   margin-top: 8rem;
@@ -258,12 +258,15 @@ MEDIA QUERIES MIXINS
   .project h2 {
     font-size: 2.4rem; }
   .project--header {
+    padding: 1rem auto;
     font-size: 2.6rem;
     letter-spacing: 0.1rem;
     font-weight: 500; }
   .project--sub {
-    line-height: 145%;
-    font-weight: 300;
+    line-height: 150%;
+    font-weight: 400;
+    margin: 0 auto 6rem;
+    width: 70%;
     font-size: 1.6rem; }
     .project--sub a {
       padding-left: 0.8rem; }
@@ -361,6 +364,15 @@ MEDIA QUERIES MIXINS
   flex-grow: 1;
   width: 100%;
   margin: 0 auto; }
+  .carousel__close {
+    border: 2px solid black;
+    padding: 0.2rem;
+    border-radius: 1rem;
+    transition: 0.2s all ease-in-out; }
+    .carousel__close:hover {
+      transition: 0.2s all ease-in;
+      color: #EE4266;
+      border-color: #EE4266; }
   .carousel__label {
     font-size: 1.7rem;
     letter-spacing: 0.1rem;
